# spammer-check

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: dns.hpp  format.hpp  lookup.hpp
src/: CMakeLists.txt  dns.cpp  format.cpp  lookup.cpp
tests/: CMakeLists.txt  format.cpp
